fix:TOS-812 The Element creation introduction vedio is not visible and also the overlay is not scrollable in Mobile Inspector

--- a/ui/src/scss/_sizing.scss
+++ b/ui/src/scss/_sizing.scss
@@ -135,7 +135,6 @@ $abbrev in (width: w, height: h) {
 .h-100-82 {
   height: calc(100% - 82px)!important;
 }
-
 .h-300p{
   height: 300px;
 }
@@ -196,10 +195,15 @@ $abbrev in (width: w, height: h) {
 
   min-height: 45px;
 }
-.min-h-62{
+.min-h-62 {
   min-height: 62px;
 }
-
+@mixin calcHeight($height){
+  height: calc(100% - #{$height});
+}
+.h-100-n60{
+  @include calcHeight(3.75rem);
+}
 .tutorial-video-section {
   flex: 4 0 100% !important;
   min-width: 80% !important;
@@ -211,3 +215,4 @@ $abbrev in (width: w, height: h) {
   min-width: 20% !important;
   max-width: 20% !important;
 }
+
